About me insertion

--- a/src/boxdummy.html
+++ b/src/boxdummy.html
@@ -31,427 +31,45 @@
         <div class="scroll">
           <div id="boxContent">
             <!-- INSERT HTML HERE -->
-            <header>
-              <h2>Competências</h2>
-            </header>
+            <head>
+              <h2>Sobre Mim</h2>
+            </head>
             <section>
-              <h3>Projetos para a Web</h3>
-              <h4>Autorais</h4>
-              <div class="project-container">
-                <div class="project-boxes">
-                  <div class="project-box">
-                    <div class="icons">
-                      <a
-                        target="_blank"
-                        rel="external"
-                        href="https://github.com/aleitaosantos/alexandreleitao-v1"
-                        ><i class="fa-brands fa-github"></i
-                      ></a>
-                      <a target="_blank" rel="external" href="https://alexandreleitao.netlify.app/"
-                        ><i class="fa-solid fa-up-right-from-square"></i
-                      ></a>
-                    </div>
-                    <div class="project-title">Website Pessoal</div>
-                    <div class="year">2022</div>
-                  </div>
-                  <div class="project-box">
-                    <div class="icons">
-                      <i class="fa-brands fa-github"></i>
-                      <i class="fa-solid fa-up-right-from-square"></i>
-                    </div>
-                    <div class="project-title">Unesco Heritage Sites</div>
-                    <div class="year">2022</div>
-                  </div>
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">Website Anhumas Arquitetos Associados</div>
-                    <div class="year">2016</div>
-                  </div>
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">Website Gabinete Urbano</div>
-                    <div class="year">2015</div>
-                  </div>
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">Website Curso Linguagem</div>
-                    <div class="year">2015</div>
-                  </div>
-                </div>
+              <div class="photo-paragraph">
+                <img class="portrait" src="../static/portrait.png" alt="Alexandre's portrait" />
+                <p>
+                  Me chamo Alexandre Leitão Santos e sou apaixonado por design e programação. Sou
+                  português e morei minha vida toda no Brasil. Recentemente, passei a viver na
+                  Europa. Me formei em arquitetura e urbanismo pela Universidade de São Paulo,
+                  instituição pela qual também obtive meu título de Mestre em Ciências.
+                </p>
               </div>
+              <p>
+                Desde muito cedo na carreira tracei pontes entre os projetos de arquitetura e o
+                campo da informática. Essa relação foi desde o tradicional uso do CAD e da modelagem
+                3D até o desenvolvimento de projetos complexos em BIM (Modelagem da Informação da
+                Construção) e de análises urbanas em SIG (Sistemas de Informação Geográfica). Ao
+                mesmo tempo, tive a oportunidade de desenvolver minhas habilidades no campo do
+                design gráfico, algo que começou como hobbie mas que logo tomou dimensão formal.
+              </p>
+              <p>
+                As necessidades profissionais me levaram a aprender os fundamentos das ciências da
+                computação, além de linguagens de programação. Hoje, busco uma carreira como
+                desenvolvedor que se utilize das minhas experiências prévias e das minhas
+                competências adquiridas.
+              </p>
+              <p>
+                Gosto muito de trabalhar em equipes, mas valorizo o tempo de introspecção no
+                desenvolvimento de tarefas individuais. Empenho-me sempre em conhecer novos recursos
+                e manter a aprendizagem continuada e, por isso, busco ambientes estimulantes para
+                compartilhar conhecimentos.
+              </p>
+              <p>
+                Sou aficionado por gastronomia, fotografia, cinema e, claro, por design. Tenho três
+                gatos, um filho e uma adorável esposa. Também gosto muito de falar sobre isso tudo.
+                Se você quiser, conecte-se a mim e vamos conversar!
+              </p>
             </section>
-            <section>
-              <h3>Projetos Gráficos</h3>
-              <h4>Autorais</h4>
-              <div class="project-container">
-                <div class="project-boxes">
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">Anuário LEAUC</div>
-                    <div class="year">2022</div>
-                  </div>
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">Branding Urbanicidades</div>
-                    <div class="year">2016-2022</div>
-                  </div>
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">Branding Anhumas Arquitetos Associados</div>
-                    <div class="year">2016</div>
-                  </div>
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">Branding Gabinete Urbano</div>
-                    <div class="year">2014</div>
-                  </div>
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">Branding Gato Urbano</div>
-                    <div class="year">2015</div>
-                  </div>
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">Comunicação Estudos Urbanos SP</div>
-                    <div class="year">2014</div>
-                  </div>
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">Branding EREA SP</div>
-                    <div class="year">2007</div>
-                  </div>
-                </div>
-              </div>
-            </section>
-            <section>
-              <h3>Projetos de Arquitetura</h3>
-              <h4>Autorais</h4>
-              <div class="project-container">
-                <div class="project-boxes">
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Museu Marítimo do Brasil</p>
-                      <p>Rio de Janeiro</p>
-                    </div>
-                    <div class="year">2021</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Igreja "Nova Semente"</p>
-                      <p>São Paulo</p>
-                    </div>
-                    <div class="year">2021</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>CEVISA</p>
-                      <p>Engenheiro Coelho</p>
-                    </div>
-                    <div class="year">2021</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Residência Cazarotto</p>
-                      <p>Campinas</p>
-                    </div>
-                    <div class="year">2021</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Residência Gnatos</p>
-                      <p>Campinas</p>
-                    </div>
-                    <div class="year">2021</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Residência Vasconcellos</p>
-                      <p>Campinas</p>
-                    </div>
-                    <div class="year">2021</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Hospital Veterinário Universitário</p>
-                      <p>Engenheiro Coelho</p>
-                    </div>
-                    <div class="year">2019</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Residência Mussi</p>
-                      <p>Paraty</p>
-                    </div>
-                    <div class="year">2018</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Residência Biller</p>
-                      <p>Campinas</p>
-                    </div>
-                    <div class="year">2017</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Residência Rodrigues</p>
-                      <p>Porto Velho</p>
-                    </div>
-                    <div class="year">2017</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Escola Criar</p>
-                      <p>Campinas</p>
-                    </div>
-                    <div class="year">2017</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Casa da Sustentabilidade</p>
-                      <p>Campinas</p>
-                    </div>
-                    <div class="year">2016</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Conjunto "Sol Nascente"</p>
-                      <p>Brasília</p>
-                    </div>
-                    <div class="year">2016</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Clínica Cazarotto</p>
-                      <p>Campinas</p>
-                    </div>
-                    <div class="year">2016</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Estúdio Anhumas</p>
-                      <p>Campinas</p>
-                    </div>
-                    <div class="year">2016</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Residência Neves</p>
-                      <p>Campinas</p>
-                    </div>
-                    <div class="year">2016</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Residência Samantha</p>
-                      <p>Araras</p>
-                    </div>
-                    <div class="year">2015</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Biblioteca FDUSP</p>
-                      <p>São Paulo</p>
-                    </div>
-                    <div class="year">2013</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Cobertura do Mercado Público</p>
-                      <p>Florianópolis</p>
-                    </div>
-                    <div class="year">2013</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Confederação Nacional dos Municípios</p>
-                      <p>Brasília</p>
-                    </div>
-                    <div class="year">2010</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Biblioteca Pública</p>
-                      <p>Florianópolis</p>
-                    </div>
-                    <div class="year">2010</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Marcos Rodoviários</p>
-                      <p>Brusque</p>
-                    </div>
-                    <div class="year">2010</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Residência Fátima Leitão</p>
-                      <p>São Carlos</p>
-                    </div>
-                    <div class="year">2010</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Terminais Marítimos Metropolitanos</p>
-                      <p>Florianópolis</p>
-                    </div>
-                    <div class="year">2009</div>
-                  </div>
-                </div>
-              </div>
-
-              <h4>Em colaboração</h4>
-
-              <div class="project-container">
-                <div class="project-boxes">
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Subsea Seven</p>
-                      <p>Rio de Janeiro</p>
-                    </div>
-                    <div class="year">2011</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>IBM</p>
-                      <p>Hortolândia</p>
-                    </div>
-                    <div class="year">2011</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>General Motors do Brasil</p>
-                      <p>São Caetano do Sul</p>
-                    </div>
-                    <div class="year">2010</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Galeria de Arte</p>
-                      <p>São Paulo</p>
-                    </div>
-                    <div class="year">2010</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Residência na Vila Ida</p>
-                      <p>São Paulo</p>
-                    </div>
-                    <div class="year">2010</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Museus da USP</p>
-                      <p>São Paulo</p>
-                    </div>
-                    <div class="year">2010</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Instituto de Tecnologia Vale</p>
-                      <p>Belém</p>
-                    </div>
-                    <div class="year">2010</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Conjunto "Comandante Taylor"</p>
-                      <p>São Paulo</p>
-                    </div>
-                    <div class="year">2010</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Biblioteca Mário de Andrade</p>
-                      <p>São Paulo</p>
-                    </div>
-                    <div class="year">2010</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Centro de Apoio Cosan</p>
-                      <p>Piracicaba</p>
-                    </div>
-                    <div class="year">2010</div>
-                  </div>
-
-                  <div class="project-box">
-                    <div class="icons"></div>
-                    <div class="project-title">
-                      <p>Fatec Jaguaré</p>
-                      <p>São Paulo</p>
-                    </div>
-                    <div class="year">2010</div>
-                  </div>
-                </div>
-              </div>
-            </section>
-
             <!-- END HTML INSERT -->
           </div>
           <div id="backToBoxTop"><i class="fa-solid fa-angles-up"></i></div>
