--- a/src/index.html
+++ b/src/index.html
@@ -17,23 +17,8 @@
   </head>
   <body>
     <div class="loading-box">
-      <div class="loading-container">
-        <svg width="80px" height="80px" viewBox="0 0 640 640">
-          <polyline
-            class="loading-polyline"
-            points="320,320 470.11,233.33 470.11,580 620.22,320 470.11,233.33 320,493.34 470.11,580 169.88,580 19.77,320 169.88,406.66 319.99,146.66 169.88,60 19.77,320 319.99,146.66 319.99,320 "
-          />
-          <polyline
-            class="loading-polyline"
-            points="319.99,320 169.88,233.33 470.1,60 169.88,60 169.88,233.33 470.1,233.33 470.1,60 620.22,320 470.1,580 470.1,406.67 169.88,406.67 169.88,580 470.1,580 169.88,406.67 319.99,320.01 "
-          />
-          <polyline
-            class="loading-polyline"
-            points="319.99,320.01 319.99,493.34 19.77,320 169.88,580 319.99,493.34 169.88,233.34 19.77,320 169.88,60 470.11,60 320,146.66 470.11,406.67 620.22,320 470.11,60 470.11,406.67 320,320 "
-          />
-        </svg>
-        <div class="loading-bar"></div>
-      </div>
+      <div class="loading-bar"></div>
+      <div class="loading-container"></div>
     </div>
     <canvas class="webgl"></canvas>
     <div class="main">
