--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
-    <meta name="description" content="Enter description here." />
+    <title>Alexandre Leitão Santos</title>
+    <meta
+      name="description"
+      content="Front-End Developer Personal Website. Former architect with over a decade of experience who opted to build interfaces for the web. Passionate about graphic design, 3D modeling, product development and computer programming."
+    />
+    <meta name="keywords" content="HTML, CSS, JavaScript, Three.js, Frontend, Developer" />
+    <meta name="author" content="Alexandre Leitão Santos" />
     <link rel="icon" type="image/svg" href="favicon.svg" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,7 +23,6 @@
   <body>
     <div class="loading-box">
       <div class="loading-bar"></div>
-      <div class="loading-container"></div>
     </div>
     <canvas class="webgl"></canvas>
     <div class="main">
