--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     />
     <meta name="keywords" content="HTML, CSS, JavaScript, Three.js, Frontend, Developer" />
     <meta name="author" content="Alexandre Leitão Santos" />
+    <meta property="og:image" content="portrait.jpg" />
     <link rel="icon" type="image/svg" href="favicon.svg" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
