--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,20 @@
     />
     <meta name="keywords" content="HTML, CSS, JavaScript, Three.js, Frontend, Developer" />
     <meta name="author" content="Alexandre Leitão Santos" />
-    <meta property="og:image" content="https://alexandreleitao.netlify.app/portrait.png" />
+    <meta property="og:site_name" content="Alexandre Leitão Santos" />
+    <meta property="og:title" content="Alexandre Leitão Santos" />
+    <meta
+      property="og:description"
+      content="Front-End Developer Personal Website. Former architect
+    with over a decade of experience who opted to build interfaces for the web. Passionate about
+    graphic design, 3D modeling, product development and computer programming."
+    />
+    <meta
+      property="og:image"
+      itemprop="image"
+      content="https://alexandreleitao.netlify.app/portrait.png"
+    />
+    <meta property="og:type" content="website" />
     <link rel="icon" type="image/svg" href="favicon.svg" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
