meta image change

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <meta
       property="og:image"
       itemprop="image"
-      content="https://alexandreleitao.netlify.app/portrait.png"
+      content="https://alexandreleitao.netlify.app/metaimage.png"
     />
     <meta property="og:type" content="website" />
     <link rel="icon" type="image/svg" href="favicon.svg" />
